--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -11,32 +11,35 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imgDetail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/logo"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
 
-        <TextView
-            android:id="@+id/txtJudulDetail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nama Bunga"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:gravity="center"/>
+            <ImageView
+                android:id="@+id/imgDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:src="@drawable/logo" />
 
-        <TextView
-            android:id="@+id/txtDeskripsiDetail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="20dp"
-            android:paddingLeft="20pt"
-            android:paddingRight="20pt"
-            android:text="Deskripsi"/>
+            <TextView
+                android:id="@+id/txtJudulDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Nama Bunga"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+            <TextView
+                android:id="@+id/txtDeskripsiDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20pt"
+                android:paddingTop="20dp"
+                android:paddingRight="20pt"
+                android:text="Deskripsi" />
 
     </LinearLayout>
+
+
 
 
 </RelativeLayout>
