--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -44,6 +44,12 @@
                     android:layout_height="wrap_content"
                     android:text="Nama Latin"/>
 
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Details"/>
+
 
             </LinearLayout>
 
