--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -45,6 +45,7 @@
                     android:text="Nama Latin"/>
 
                 <Button
+                    android:id="@+id/btnDetails"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
