--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,11 +14,14 @@
 
             <ImageView
                 android:id="@+id/imgDetail"
-                android:layout_width="match_parent"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
                 android:src="@drawable/logo" />
+
 
             <TextView
                 android:id="@+id/txtJudulDetail"
@@ -26,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Nama Bunga"
+                android:textSize="25dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
             <TextView
@@ -35,7 +39,8 @@
                 android:paddingLeft="20pt"
                 android:paddingTop="20dp"
                 android:paddingRight="20pt"
-                android:text="Deskripsi" />
+                android:text="Deskripsi"
+                android:textSize="20dp"/>
 
     </LinearLayout>
 
